# ble-fuzzer

./: .gitignore  README.md  pom.xml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codespell.yml  shellcheck.yml
experiments/alphabets/: pairing.xml  pairingsc.xml
experiments/args/: ArduinoNanoESP32_pairing  IntelAX200BlueZ_pairing  NimBLE_default  NimBLE_pairing  NimBLE_pairingsc  RPiPico2W_pairing  RPiZeroWBlueZ_pairing  nRF52840DKNimBLE_default  nRF52840DKNimBLE_pairing  nRF52840_pairing
experiments/results_saved/NimBLE_pairing/: hyp10.dot  hyp11.dot  hyp12.dot  hyp13.dot  hyp14.dot  hyp15.dot  hyp16.dot  hyp17.dot  hyp18.dot  hyp19.dot  hyp2.dot  hyp20.dot  hyp21.dot  hyp22.dot  hyp23.dot  hyp24.dot  hyp3.dot  hyp4.dot  hyp5.dot  hyp6.dot  hyp7.dot  hyp8.dot  hyp9.dot
experiments/results_saved/NimBLE_pairingsc/: hyp1.dot  hyp10.dot  hyp11.dot  hyp12.dot  hyp13.dot  hyp14.dot  hyp15.dot  hyp16.dot  hyp17.dot  hyp18.dot  hyp19.dot  hyp2.dot  hyp20.dot  hyp21.dot  hyp22.dot  hyp23.dot  hyp24.dot  hyp25.dot  hyp26.dot  hyp27.dot  hyp3.dot  hyp4.dot  hyp5.dot  hyp6.dot  hyp7.dot  hyp8.dot  hyp9.dot
experiments/results_saved/nRF52840DKNimBLE_pairing/: hyp1.dot  hyp10.dot  hyp11.dot  hyp12.dot  hyp13.dot  hyp2.dot  hyp3.dot  hyp4.dot  hyp5.dot  hyp6.dot  hyp7.dot  hyp8.dot  hyp9.dot
experiments/results_saved/nRF52840_pairing/: hyp1.dot  hyp2.dot  hyp3.dot
experiments/targets/: RPiZeroWBlueZ  nRF52840DKNimBLE
experiments/targets/RPiPico2W/peripheral/: CMakeLists.txt  lbs.gatt  server.c  server_common.c  server_common.h
experiments/tests/: connect_att_read.txt  connect_feature.txt  connect_scan.txt  pair_att_read.txt  pair_enc_enc.txt  pair_sc_att_read.txt  repro_nrf52840_pairing_reject.txt  repro_nrf52840_pairing_reject2.txt
py/: BLESUL.py  BLESUL_ArduinoNanoESP32.py  BLESUL_CI.py  BLESUL_IntelAX200BlueZ.py  BLESUL_NimBLE.py  BLESUL_RPiPico2W.py  BLESUL_RPiZeroWBlueZ.py  BLESUL_nRF52840.py  BLESUL_nRF52840DKNimBLE.py  NRF52_Driver.py
scripts/: diff_hyps.sh  reset_ble_stack.sh  reset_bluez.sh  reset_ci.sh  reset_manually.sh  reset_usb_uhubctl.sh  reset_usb_unbind.sh  setup_venv.sh
(+66 files in other folders)
